@@ -19,6 +19,16 @@ Recipe Options
 
       /path/to/buildout-dir/foo/bar
 
+* ``remove-on-update``
+     Default: ``no``
+
+     By default, created directories are not removed
+     on updates of buildout configuration. This is a security measure
+     as created directories might contain valuable data.
+
+     You can, however, enforce automatic removing on updates by
+     setting this option to ``on``, ``yes`` or ``true``.
+
 
 Simple creation of directories via buildout
 ===========================================
@@ -79,7 +89,76 @@ Now we can run buildout:
 The directory was indeed created:
 
   >>> ls('parts')
+  d  mydir
   d  myotherdir
+
+
+Creating directories that are removed on updates
+================================================
+
+We can tell, that a directory should be removed on updates by using
+the ``remove-on-update`` option:
+
+  >>> write('buildout.cfg',
+  ... '''
+  ... [buildout]
+  ... parts = mydir
+  ... offline = true
+  ...
+  ... [mydir]
+  ... recipe = z3c.recipe.mkdir
+  ... remove-on-update = true
+  ... paths = newdir
+  ... ''')
+
+  >>> print system(join('bin', 'buildout')),
+  Uninstalling mydir.
+  Installing mydir.
+  mydir: created path: /sample-buildout/newdir
+
+The ``newdir/`` directory was created:
+
+  >>> ls('.')
+  -  .installed.cfg
+  d  bin
+  -  buildout.cfg
+  d  develop-eggs
+  d  eggs
+  d  newdir
+  d  parts
+
+We rewrite `buildout.cfg` and set a different path:
+
+  >>> write('buildout.cfg',
+  ... '''
+  ... [buildout]
+  ... parts = mydir
+  ... offline = true
+  ...
+  ... [mydir]
+  ... recipe = z3c.recipe.mkdir
+  ... remove-on-update = true
+  ... paths = newdir2
+  ... ''')
+
+  >>> print system(join('bin', 'buildout')),
+  Uninstalling mydir.
+  Installing mydir.
+  mydir: created path: /sample-buildout/newdir2
+
+Now ``newdir/`` has vanished and ``newdir2`` exists:
+
+  >>> ls('.')
+  -  .installed.cfg
+  d  bin
+  -  buildout.cfg
+  d  develop-eggs
+  d  eggs
+  d  newdir2
+  d  parts
+
+Note, that the created directory will be removed on next modification
+of `buildout.cfg`.
 
 
 Creating relative paths
@@ -114,10 +193,11 @@ buildout directory:
   d  myrootdir
   d  parts
 
-  The old directory will vanish:
+  The old directories will **not** vanish:
 
-  >>> ls('parts') is None
-  True
+  >>> ls('parts')
+  d  mydir
+  d  myotherdir
 
 
 Creating intermediate paths
@@ -200,6 +280,7 @@ We can create multiple paths in one buildout section:
 
 
   >>> ls('myroot')
+  d  bar
   d  dir1
   d  dir2
 
@@ -245,6 +326,9 @@ or without:
   mydir: created path: /sample-buildout/myroot/dir4
 
   >>> ls('myroot')
+  d  bar
+  d  dir1
+  d  dir2
   d  dir3
   d  dir4
 
@@ -252,7 +336,8 @@ Things to be aware of
 =====================
 
 If you change the setting of some path, the old directory and all its
-contents will be lost:
+contents will **not** be deleted (as you might expect from a buildout
+recipe):
 
   >>> write('buildout.cfg',
   ... '''
@@ -293,9 +378,10 @@ Now we switch the setting of mydir to ``path2``:
   mydir: created path: /sample-buildout/path2
   <BLANKLINE>
 
+The file we created above is still alive:
+
   >>> ls('path1')
-  Traceback (most recent call last):
-  OSError: [Errno ...] No such file or directory: 'path1'
+  -  myfile
 
 
 Things, one should not do
@@ -315,17 +401,17 @@ raised:
   ...
   ... [mydir]
   ... recipe = z3c.recipe.mkdir
-  ... paths = myrootdir/somefile/foo
+  ... paths = rootdir2/somefile/foo
   ... ''')
 
 Now we create the first part of the path beforehand:
 
   >>> import os
-  >>> os.mkdir('myrootdir')
+  >>> os.mkdir('rootdir2')
 
 And make the second part of the path a file:
 
-  >>> write(join('myrootdir', 'somefile'),
+  >>> write(join('rootdir2', 'somefile'),
   ... '''
   ... blah
   ... ''')
@@ -335,7 +421,7 @@ And make the second part of the path a file:
   Installing mydir.
   While:
     Installing mydir.
-  Error: Cannot create directory: /.../myrootdir/somefile. It's a file.
+  Error: Cannot create directory: /.../rootdir2/somefile. It's a file.
 
 
 Don't use ``path`` option
@@ -355,6 +441,7 @@ Starting with version 0.3 the ``path`` option is deprecated. Use
   ... [mydir]
   ... recipe = z3c.recipe.mkdir
   ... path = myrootdir
+  ... remove-on-update = yes
   ... ''')
 
   >>> print system(join('bin', 'buildout')),
@@ -363,3 +450,5 @@ Starting with version 0.3 the ``path`` option is deprecated. Use
   mydir: created path: /sample-buildout/parts/mydir
 
 The ``path`` option will be supported only for a limited time!
+
+
